fix: read CORS allowed origins from app.cors.allowed-origins property